add swagger client
