# handlers/get.go
@@ -15,6 +15,7 @@ import (
 func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
 
+	rw.Header().Add("Content-Type", "application/json")
 	prods := data.GetProducts()
 	err := data.ToJSON(prods, rw)
 	if err != nil {
@@ -22,7 +23,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -31,7 +32,7 @@ func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
 // ListSingle handles GET requests returns one product
 func (p *Products) ListSingle(rw http.ResponseWriter, r *http.Request) {
 	id := getProductID(r)
-
+	rw.Header().Add("Content-Type", "application/json")
 	p.l.Println("[DEBUG] get record id: ", id)
 
 	prod, err := data.GetProductByID(id)
